--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,6 +23,8 @@
 	<h1>Flags:</h1>
 	<%= render 'project_flags' %>
 </div>
+<%= javascript_include_tag "underscore/index" %>
+<%= render 'project_flag_form' %>
 
 
 
