Renames source_type to search_engine_type, but maintains source_type in search URLs

--- a/app/views/projects/_project_sources.html.erb
+++ b/app/views/projects/_project_sources.html.erb
@@ -20,7 +20,7 @@
 						Document type: <%= s.document_type.nil? ? @unset_data : link_to(s.document_type.name, s.document_type) %>
 					</li>
 					<li>
-						Source type: <%= s.source_type.nil? ? @unset_data : link_to( s.source_type.name, s.source_type) %>
+						Search engine type: <%= s.source_type.nil? ? @unset_data : link_to( s.source_type.name, s.source_type) %>
 					</li>
 				</ul>
 			</div>
