Resources showing and indexing

--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -20,6 +20,7 @@
     <li><%= link_to "Scopes", scopes_path %></li>
     <li><%= link_to "Countries", countries_path %></li>
     <li><%= link_to "Organizations", organizations_path %></li>
+    <li><%= link_to "Resources", resources_path %></li>
     <li class="divider"></li>
     <li><b>Codes:</b></li>
     <li><%= link_to "Statuses", statuses_path %></li>
