--- a/app/views/resources/_form.html.haml
+++ b/app/views/resources/_form.html.haml
@@ -22,6 +22,9 @@
       .span3
         = f.input :dont_fetch, label: "Don't fetch this resource", hint: "By default, we'll save a copy of this."
     .row-fluid
+      .span6
+        = f.association :projects, label_method: :to_english, value_method: :id
+    .row-fluid
       %hr
     .row-fluid
       .span2
