--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -81,7 +81,6 @@
 	<ul>
 </div>
 
-<hr>
 
 <div class="row-fluid">
 	<div class="span3">
@@ -143,6 +142,7 @@
 			<h4>Sources:</h4>
 			<%= render 'project_sources' %>
 		</div>
+		<%= render 'resources' %>
 	</div>
 
 	<div class='span6 well'>
@@ -152,7 +152,6 @@
 	</div>
 </div>
 <% if current_user_is_aiddata %>
-	<% p "Rendering flags project #{@project.id}" %>
 	<div class='row-fluid '>
 		<div class='well span6'>
 			<h4>Flow Class Code Rounds:</h4>
@@ -168,5 +167,4 @@
 <% end %>
 
 </div>
-<% p "Rendering project_flaggable project #{@project.id}" %>
 <%= render('project_flaggable')  %>
