Replaced the review entries model with a published attribute
Projects, comments, and flags now have a published attribute that defaults to
true. Suggested projects will have false published statuses, as well as
comments and flags made by users who are not logged in.

The review entries dashboard can now be found at /pending_content/ and it
can be pseudo-scoped at /pending_content/projects, etc.

--- a/app/views/aiddata_admin_mailer/pending_content_notification.text.erb
+++ b/app/views/aiddata_admin_mailer/pending_content_notification.text.erb
@@ -1,7 +1,7 @@
 PENDING USER CONTENT 
 ============================
 
-A pending <%= @review.ar_model %>
+A pending <%= @content.class.name %>
 was just <%= @handled %> 
 <%# current_user ? current_user.email : "an anonymous user"%>.
 
@@ -9,12 +9,11 @@ was just <%= @handled %>
 (Since this item was handled, it's no longer available at china.aiddata.org/review_entries)
 
 Here's a data dump of the item:
-<%= @review.serialized_item %>
+<%= @content.attributes %>
 
 <% else %>
-  See the content
-  <%# link_to host: Rails.env.production? ? "china.aiddata.org" : "localhost:3000" %>
-  <%= review_entry_url(@review) %>
+  See
+  <%= link_to "the content", @content %>
 <% end %>
 
 You received this email because you are an AidData admin at 
