--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -122,6 +122,6 @@
                 %li 
                   = link_to "Users", users_path
                 %li
-                  = link_to "<i>Pending Content</i>".html_safe, review_entries_path
+                  = link_to "<i>Pending Content</i>".html_safe, pending_content_path
                 %li
                   = link_to "Exports", exports_path
