Updated a reference to "review_entries"

--- a/app/views/aiddata_admin_mailer/pending_content_notification.text.erb
+++ b/app/views/aiddata_admin_mailer/pending_content_notification.text.erb
@@ -6,7 +6,7 @@ was just <%= @handled %>
 <%# current_user ? current_user.email : "an anonymous user"%>.
 
 <% if not @was_approved.nil? %>
-(Since this item was handled, it's no longer available at china.aiddata.org/review_entries)
+(Since this item was handled, it's no longer available at china.aiddata.org/pending_content)
 
 Here's a data dump of the item:
 <%= @content.attributes %>
