Resources are searchable

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -491,6 +491,7 @@ label {
 .twitter-typeahead .tt-query,
 .twitter-typeahead .tt-hint {
   margin-bottom: 0;
+  padding: 0;
 }
 
 .tt-dropdown-menu {
