--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -21,6 +21,9 @@
 				<div id ='project-form-project' class='span12'>
 					<!-- a id='project-anchor' class='project-form-anchor'></a -->
 					<h3> Project #<%= @project.id || " (new) " %> </h3>
+          <div class='row-fluid'>
+						<%= f.input :published, label: false, inline_label: "Published", wrapper_html: { class: "span2"} %>
+          </div>
 					<div class='row-fluid'>
 						<%= f.association :donor, wrapper_html: {class: "span2"}, label: 'Donor country' %>
 						<%= f.input :title, wrapper_html: {class: "span6"} %>
