--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -2,9 +2,12 @@
 %h1.page-header All Resources
 
 - if current_user_is_aiddata
-    %a.btn.btn-success{href: new_resource_path }
-        New Resource
+    = link_to "New Resource", new_resource_path, class: "btn btn-success"
+
+
+= will_paginate @resources
 - dir = (params[:dir] == "ASC" ? "DESC" : "ASC") 
+
 %table.table.table-hover
     %thead
         %tr
@@ -16,7 +19,8 @@
                 = link_to "Retrieved at", params.merge(order: "fetched_at", dir: dir)
             %th 
                 = link_to "Resource type", params.merge(order: "resource_type", dir: dir)
-            %th # Linked Projects
+            %th 
+                = link_to "# Linked Projects", params.merge(order: "projects_count", dir: dir)
     %tbody
         -  @resources.each do |resource|
             %tr
@@ -31,6 +35,6 @@
                 %td
                     = resource.resource_type
                 %td
-                    = resource.projects.length
+                    = resource.projects_count
 = will_paginate @resources
 
